# neobroker-portfolio-importer

./: .pre-commit-config.yaml  neobroker-portfolio-importer.py  pyproject.toml  readme.md  requirements-packages.py  requirements.txt
.github/workflows/: pre-commit-workflow.yaml
neobroker_portfolio_importer/: scalable_capital.py  selenium_utils.py  trade_republic.py
templates/: investments.xlsx
